# china-wealth-data

./: CLAUDE.md  LICENSE  README.md  example.beancount  pyproject.toml
docs/: README.md
docs/abc/: README.md
docs/abc/examples/: FsProdInfo.json  OwnProdNetValueFilterV3.json  ProxyProdList.json  ProxyProdquickFind.json
docs/ccb/: README.md
docs/ccb/examples/: getProducts.json  nav_history.json  nlczst_check.json  page.html
docs/ccb/js/: page.js  product.js
docs/ccb_wm/: README.md
docs/chinawealth/: README.md  draft.md  index.js  vendor.js
docs/chinawealth/examples/: getInitData.json  getNetValueList.json  getProductDetail.json
docs/citic/: README.md
docs/citic/examples/: getTAProductDetail.json  getTAProductNav.json
docs/citic_wm/: README.md
docs/cmb/: README.md
docs/cmb/examples/: getSAProductDetailInfo,json
docs/cmb_bank/: README.md
docs/cmb_bank/examples/: getSAValueByPageOrDate.json  getproductbyprdcode.json  queryProdList.json
docs/cmb_wm/: README.md
docs/cmb_wm/examples/: getDetail.json  getNetValAndRate.json
docs/hsbc/: README.md
docs/hsbc/examples/: performanceHist.json  performanceHist.md  productDetail.json  productDetail.md  productList.json
docs/hsbc_bank/: README.md
docs/icbc/: README.md
docs/icbc/examples/: detail.json  getNetValueList.json  historical.json
docs/pingan/: README.md
docs/pingan_bank/: README.md
docs/pingan_bank/examples/: finacDetail.do.json  (+1 more)
docs/pingan_wm/: README.md
src/china_wealth/: __init__.py  chinawealth.py  cli.py  http.py  source.py  types.py
tests/: test_ccb.py  test_registry.py
(+21 files in other folders)
