[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "china-wealth-data"
version = "0.1.0"
description = "Fetch NAV data from Chinese bank wealth management products"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
]

[project.scripts]
china-wealth = "china_wealth.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/china_wealth"]

[dependency-groups]
dev = ["pytest", "pytest-cov"]
